<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_container_padding"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/website_margin_top_edt"
        android:hint="@string/hint_website"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonInApp"
        android:text="@string/open_website_button_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonInApp"
        android:text="@string/open_location_button_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_share"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonInApp"
        android:text="@string/share_button_text" />
</LinearLayout>